syntax = "proto3";

package ratings.features.user;

import "google/protobuf/empty.proto";

service User {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse) {}
  rpc Delete (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Vote (VoteRequest) returns (google.protobuf.Empty) {}
  rpc ListVotes (ListVotesRequest) returns (ListVotesResponse) {}
}

message RegisterRequest {
  string user_id = 1;
}

message RegisterResponse {
  string token = 1;
}

message AuthenticateRequest {
  string user_id = 1;
}

message AuthenticateResponse {
  string token = 1;
}

message ListVotesRequest {
  string app = 1;
}

message ListVotesResponse {
  string snap_id = 1;
  string snap_revision = 2;
  bool vote_up = 3;
  int64 timestamp = 4;
}

message VoteRequest {
  string snap_id = 1;
  int32 snap_revision = 2;
  bool vote_up = 3;
}
